package com.baoge.designpattern.chuangjianxing.p02_gongchang.v2_duogegongchang;

public abstract class AbsHumanFactory {
    public abstract Human createHuman();
}
