package com.baoge.designpattern.chuangjianxing.p02_gongchang.v2_duogegongchang;

public interface Human {
    public void getColor();
    public void talk();

}
