@startuml

title __V2_DUOGEGONGCHANG's Class Diagram__\n

  namespace com.baoge.designpattern {
    namespace chuangjianxing {
      namespace p02_gongchang.v2_duogegongchang {
        abstract class com.baoge.designpattern.chuangjianxing.p02_gongchang.v2_duogegongchang.AbsHumanFactory {
            {abstract} + createHuman()
        }
      }
    }
  }
  

  namespace com.baoge.designpattern {
    namespace chuangjianxing {
      namespace p02_gongchang.v2_duogegongchang {
        class com.baoge.designpattern.chuangjianxing.p02_gongchang.v2_duogegongchang.Client {
            {static} + main()
        }
      }
    }
  }
  

  namespace com.baoge.designpattern {
    namespace chuangjianxing {
      namespace p02_gongchang.v2_duogegongchang {
        interface com.baoge.designpattern.chuangjianxing.p02_gongchang.v2_duogegongchang.Human {
            {abstract} + getColor()
            {abstract} + talk()
        }
      }
    }
  }
  

  namespace com.baoge.designpattern {
    namespace chuangjianxing {
      namespace p02_gongchang.v2_duogegongchang {
        class com.baoge.designpattern.chuangjianxing.p02_gongchang.v2_duogegongchang.WhiteHuman {
            + getColor()
            + talk()
        }
      }
    }
  }
  

  namespace com.baoge.designpattern {
    namespace chuangjianxing {
      namespace p02_gongchang.v2_duogegongchang {
        class com.baoge.designpattern.chuangjianxing.p02_gongchang.v2_duogegongchang.WhiteHumanFactory {
            + createHuman()
        }
      }
    }
  }
  

  namespace com.baoge.designpattern {
    namespace chuangjianxing {
      namespace p02_gongchang.v2_duogegongchang {
        class com.baoge.designpattern.chuangjianxing.p02_gongchang.v2_duogegongchang.YellowHuman {
            + getColor()
            + talk()
        }
      }
    }
  }
  

  namespace com.baoge.designpattern {
    namespace chuangjianxing {
      namespace p02_gongchang.v2_duogegongchang {
        class com.baoge.designpattern.chuangjianxing.p02_gongchang.v2_duogegongchang.YellowHumanFactory {
            + createHuman()
        }
      }
    }
  }
  

  com.baoge.designpattern.chuangjianxing.p02_gongchang.v2_duogegongchang.WhiteHuman .up.|> com.baoge.designpattern.chuangjianxing.p02_gongchang.v2_duogegongchang.Human
  com.baoge.designpattern.chuangjianxing.p02_gongchang.v2_duogegongchang.WhiteHumanFactory -up-|> com.baoge.designpattern.chuangjianxing.p02_gongchang.v2_duogegongchang.AbsHumanFactory
  com.baoge.designpattern.chuangjianxing.p02_gongchang.v2_duogegongchang.YellowHuman .up.|> com.baoge.designpattern.chuangjianxing.p02_gongchang.v2_duogegongchang.Human
  com.baoge.designpattern.chuangjianxing.p02_gongchang.v2_duogegongchang.YellowHumanFactory -up-|> com.baoge.designpattern.chuangjianxing.p02_gongchang.v2_duogegongchang.AbsHumanFactory


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
